welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:16: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur()){
    ^SnakeBuggle:22: error: type mismatch;
 found   : Unit
 required: Boolean
    if(estFaceMur()){
    ^